<resources>
    <string name="app_name">Lab7</string>
    <string name="hello_message">Hello World!</string>
    <string name="GUI">Look at my GUI:</string>
    <string name="Button1">Click here</string>
    <string name="checkBox">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="editText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_message1">The switch is now on</string>
    <string name="switch_message2">The switch is now off</string>
    <string name="undo1">Undo</string>


    <string name="textEmail">Enter your email address:</string>
    <string name="editEmail">Type email here</string>
    <string name="textPassword">Type your password</string>
    <string name="logBtn">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name</string>
    <string name="inputName">Enter your name</string>
    <string name="email">Your email:</string>
    <string name="inputEmail">Enter email</string>
    <string name="picture">Your picture:</string>
    <string name="clickMsg">Click the button above to take a picture</string>
    <string name="chatBtn">Go to chat</string>
    <string name="sendBtn">SEND</string>
    <string name="receiveBtn">RECEIVE</string>
    <string name="chatText">Type here</string>

    <string name="deletemsg">Do you want to delete this?</string>
    <string name="delRow">The selected row is: </string>
    <string name="delDBid">The database ID is: </string>
    <string name="undoBtn">No</string>
    <string name="delBtn">Yes</string>
    <string name="receive_receive_receive">receive receive receive</string>
    <string name="todo">TODO</string>
    <!--lab 5-6 chatroom, add weatherforcase button-->
    <string name="weatherBtn">Weather Forecast</string>
    <string name="currentTemp">Current Temperature</string>
    <string name="minTemp">Min Temperature</string>
    <string name="maxTemp">Max Temperature</string>
    <string name="UV">UV</string>


    <!--lab7-->
    <string name="msg">Type message here</string>
    <string name="fragchk">Confirm to send the message</string>
    <string name="hidebtn">HIDE </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>