<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"    >
<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/GUI"
    android:textSize="30dp"
    android:layout_gravity="fill_horizontal" />


<Button
    android:id="@+id/myButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView"
    android:text="@string/Button1" />

<CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView"
    android:layout_toRightOf="@id/myButton"
    android:text="@string/checkBox"
    android:id="@+id/CheckBox1"/>


<ImageButton
    android:id="@+id/imgButton"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/myButton"
    android:src="@drawable/flag" />

<Switch
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/myButton"
    android:layout_toRightOf="@id/imgButton"
    android:text="@string/Switch"
    android:layout_gravity="fill_horizontal"
    android:id="@+id/Switch1"/>


<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/imgButton"
    android:layout_gravity="fill_horizontal"
    android:hint="@string/editText"
    android:inputType="textPersonName" />


</RelativeLayout>
