<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"

    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GUI"
        android:textSize="30dp"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal" />



    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="fill_horizontal"


        android:text="@string/Button1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="fill_horizontal"

        android:text="@string/checkBox"
        android:id="@+id/CheckBox1"/>


    <ImageButton
        android:id="@+id/imgButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:src="@drawable/flag" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Switch"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/Switch1"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/editText"
        android:inputType="textPersonName" />


</GridLayout>