<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentTemp" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minTemp" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxTemp" />

    <TextView
        android:id="@+id/UV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UV" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />

</LinearLayout>
